made changes to connect with react project